[package]
name = "sl"
version = "0.3.0"
edition = "2024"

description = "A generic framework for the .sl file-type"
license = "MIT"
repository = ""
homepage = ""
documentation = ""
readme = "README.md"
keywords = ["sl", "secure-ledger"]
categories = ["file-processing"]

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
hex = "0.4.3"
rand = "0.10.0"
thiserror = "2.0.18"
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
walkdir = "2.5.0"
tempfile = "3.25.0"
